--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.2.4",
     "@mui/material": "^5.2.4",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
@@ -14,8 +16,6 @@
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.0",
     "web-vitals": "^1.1.2"
-
-    
   },
   "scripts": {
     "start": "react-scripts start",
